src/objects/Media_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Advertiser_Description__c</fullName>
        <label>Advertiser Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Agency should have record type=Agency and it needs to be Active.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Leads (Agency)</relationshipLabel>
        <relationshipName>Media_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_Other__c</fullName>
        <label>Closed Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Activity already booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity discussed as value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Pulled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business titles only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign date moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Date moved Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not use online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn’t Use Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial/Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free/House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea Not Suited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Already Exists as Account / Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to A&amp;N Media Brand Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to DR/Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed a tactical opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Campaign Targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Campaign Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Creative Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not core to activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pops only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong target audience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Colour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mono</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Leads (Advertiser)</relationshipLabel>
        <relationshipName>Media_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Lead Source Competitor</label>
        <picklist>
            <controllingField>Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Bella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmopolitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glamour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grazia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Publication__c</fullName>
        <label>Date of Publication</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Comments__c</fullName>
        <description>A field to enter basic information regarding the Media Lead</description>
        <label>Description/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ad2One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Trading Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Competitor Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qantcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanimis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_to_which_Competitor__c</fullName>
        <label>Lost to which Competitor</label>
        <picklist>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Bella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmopolitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glamour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grazia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Weekend</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pitch</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Media Leads</relationshipLabel>
        <relationshipName>Media_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Ad__c</fullName>
        <label>Size of Ad</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lead Not Relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Carrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Media Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Agency__c</columns>
        <columns>Advertiser_Description__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Date_of_Publication__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_Media_Leads_more_than_7_days</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Company__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Publication__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>In-Progress Media Leads more than 7 days</label>
    </listViews>
    <listViews>
        <fullName>My_Media_Leads</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Agency__c</columns>
        <columns>Date_of_Publication__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Mine</filterScope>
        <label>.My Media Leads</label>
    </listViews>
    <nameField>
        <label>Media Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AdvertiserOrDescriptionMustBeCompleted</fullName>
        <active>true</active>
        <description>When saving a Media Lead either the Advertiser or the Advertiser Description field must be completed</description>
        <errorConditionFormula>(ISBLANK(Company__c) &amp;&amp; ISBLANK(Advertiser_Description__c)) &amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Company__c</errorDisplayField>
        <errorMessage>When saving a Media Lead either the Advertiser or the Advertiser Description field must be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CloLostReaOtherThenClosedLostReasonOther</fullName>
        <active>true</active>
        <description>When Closed Lost Reason is Other, then &apos;Closed Reason Description&apos; is required.</description>
        <errorConditionFormula>ISPICKVAL(Closed_Lost_Reason__c,&apos;Other&apos;) &amp;&amp; ISBLANK( Closed_Lost_Reason_Other__c )
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason_Other__c</errorDisplayField>
        <errorMessage>When Closed Lost Reason is Other, then &apos;Closed Reason Description&apos; is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockDownMediaLeadStatusAfterConverting</fullName>
        <active>true</active>
        <description>The Status field cannot be changed after a Media Lead has been Closed-Converted as a Pitch has already been created.</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &apos;Closed-Converted&apos;) &amp;&amp;  ISCHANGED(Status__c)</errorConditionFormula>
        <errorMessage>The Status field cannot be changed after a Media Lead has been &apos;Closed-Converted&apos; and a new Pitch has already been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LostToWhichCompetitorIsReqWhenReIsLost</fullName>
        <active>true</active>
        <description>If Lost Reason is &apos;Lost to Competitor&apos;, then &apos;Lost to Which Competitor&apos; must be selected.</description>
        <errorConditionFormula>ISPICKVAL(Closed_Lost_Reason__c, &apos;Lost to Competitor&apos;) &amp;&amp; ISNULL(Lost_to_which_Competitor__c) 
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Lost_to_which_Competitor__c</errorDisplayField>
        <errorMessage>If Lost Reason is &apos;Lost to Competitor&apos;, then &apos;Lost to Which Competitor&apos; must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MediaLeadLockReqFieldsStatusConverted</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c,&apos;Closed-Converted&apos;) &amp;&amp; ( ISCHANGED(Company__c) ||  ISCHANGED(Agency__c) || ISCHANGED(Advertiser_Description__c) || ISCHANGED(Closed_Lost_Reason__c) || ISCHANGED(Closed_Lost_Reason_Other__c) || ISCHANGED(Colour__c) || ISCHANGED(Competitor__c) || ISCHANGED(Date_of_Publication__c) || ISCHANGED(Lead_Source__c) || ISCHANGED(Position__c) || ISCHANGED(Size_of_Ad__c))</errorConditionFormula>
        <errorMessage>You cannot change any of the fields once the Media Lead status is set to Closed-Converted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonIsNeededIfStatusIsClosedLost</fullName>
        <active>true</active>
        <description>Closed Lost Reason is needed when setting Status to Closed Lost.</description>
        <errorConditionFormula>ISBLANK(TEXT(Closed_Lost_Reason__c)) &amp;&amp; ISPICKVAL( Status__c , &apos;Closed-Lost&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
        <errorMessage>Closed Lost Reason is needed when setting Status to Closed Lost.</errorMessage>
    </validationRules>
</CustomObject>